--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Samara Hansen About Me | Front-end web developer portfolio</title>
+    <title>About Samara Hansen web developer portfolio | Samara Hansen</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +21,12 @@
     <div class="containerNavbar">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Samara Hansen</a>
+          <a
+            class="navbar-brand"
+            href="index.html"
+            title="Homepage of Samara Hansen Web Developer"
+            >Samara Hansen</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -35,11 +40,25 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Homepage of Samara Hansen Web Developer"
                 >Home</a
               >
-              <a class="nav-link" href="about.html">About Me</a>
-              <a class="nav-link" href="about.html#contact">Contact Me</a>
+              <a
+                class="nav-link"
+                href="about.html"
+                title="Go to About Me page on Samara Hansen Web Developer"
+                >About Me</a
+              >
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Samara Hansen Web Developer"
+                >Contact Me</a
+              >
             </div>
           </div>
         </div>
@@ -56,19 +75,34 @@
     <div class="containerExamples">
       <div class="row">
         <div class="col-sm-4">
-          <img src="media/yoga.png" class="img-fluid" />
+          <img
+            src="media/yoga.png"
+            class="img-fluid"
+            alt="A picture of a yoga app."
+          />
         </div>
         <div class="col-sm-4">
-          <img src="media/weather.png" class="img-fluid" />
+          <img
+            src="media/weather.png"
+            class="img-fluid"
+            alt="A picture of a weather app."
+          />
         </div>
         <div class="col-sm-4">
-          <img src="media/yogurt.png" class="img-fluid" />
+          <img
+            src="media/yogurt.png"
+            class="img-fluid"
+            alt="A picture of a yogurt website."
+          />
         </div>
       </div>
     </div>
     <div id="contact">
       <h2 class="center-text">📮 Contact me</h2>
-      <a href="mailto:samaranhansen@gmail.com" class="email-link"
+      <a
+        href="mailto:samaranhansen@gmail.com"
+        class="email-link"
+        title="Email Samara Hansen Web Developer"
         >samaranhansen@gmail.com</a
       >
     </div>
