--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Samara Hansen | Front-end web developer portfolio</title>
+    <title>Front-end web developer portfolio | Samara Hansen</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +22,12 @@
       <div class="containerNavbar">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Samara Hansen</a>
+            <a
+              class="navbar-brand"
+              href="index.html"
+              title="Homepage of Samara Hansen Web Developer"
+              >Samara Hansen</a
+            >
             <button
               class="navbar-toggler"
               type="button"
@@ -36,11 +41,25 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="index.html"
+                  title="Go to homepage of Samara Hansen Web Developer"
                   >Home</a
                 >
-                <a class="nav-link" href="about.html">About Me</a>
-                <a class="nav-link" href="about.html#contact">Contact Me</a>
+                <a
+                  class="nav-link"
+                  href="about.html"
+                  title="Go to About Me page on Samara Hansen Web Developer"
+                  >About Me</a
+                >
+                <a
+                  class="nav-link"
+                  href="about.html#contact"
+                  title="Contact Samara Hansen Web Developer"
+                  >Contact Me</a
+                >
               </div>
             </div>
           </div>
@@ -52,14 +71,28 @@
           🇺🇸 Front-end developer, based in United States
         </h3>
         <div class="navigation-links">
-          <a href="about.html#contact" class="contact-link">Contact me</a>
-          <a href="about.html" class="about-link">About me</a>
+          <a
+            href="about.html#contact"
+            class="contact-link"
+            title="Contact Samara Hansen Web Developer"
+            >Contact me</a
+          >
+          <a
+            href="about.html"
+            class="about-link"
+            title="Go to About Me page on Samara Hansen Web Developer"
+            >About me</a
+          >
         </div>
       </div>
       <div class="containerExamples">
         <div class="row">
           <div class="col-sm-6 lightblue-background">
-            <img src="media/yoga.png" class="img-fluid" />
+            <img
+              src="media/yoga.png"
+              class="img-fluid"
+              alt="A picture of a yoga app."
+            />
           </div>
           <div class="col-sm-6">
             <h2>Yoga App</h2>
@@ -69,7 +102,12 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="index.html" class="yoga-link">Launch Yoga App</a>
+            <a
+              href="index.html"
+              class="yoga-link"
+              title="Launch Samara Hansen Web Developer yoga app"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
         <div class="row">
@@ -81,14 +119,27 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="index.html" class="weather-link">Launch Weather App</a>
+            <a
+              href="index.html"
+              class="weather-link"
+              title="Launch Samara Hansen Web Developer weather app"
+              >Launch Weather App</a
+            >
           </div>
           <div class="col-sm-6 lightblue-background">
-            <img src="media/weather.png" class="img-fluid" />
+            <img
+              src="media/weather.png"
+              class="img-fluid"
+              alt="A picture of a weather app."
+            />
           </div>
           <div class="row">
             <div class="col-sm-6 lightblue-background">
-              <img src="media/yogurt.png" class="img-fluid" />
+              <img
+                src="media/yogurt.png"
+                class="img-fluid"
+                alt="A picture of a yogurt website."
+              />
             </div>
             <div class="col-sm-6">
               <h2>Yogurt App</h2>
@@ -98,7 +149,12 @@
                 omnis quam vel eos eveniet alias temporibus deserunt veritatis
                 minima fugiat explicabo eum dolore.
               </p>
-              <a href="index.html" class="yogurt-link">Launch Yogurt App</a>
+              <a
+                href="index.html"
+                class="yogurt-link"
+                title="Launch Samara Hansen Web Developer Yogurt website"
+                >Launch Yogurt App</a
+              >
             </div>
           </div>
         </div>
